# todo-web

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  fly.toml  todos.db  todos.db-shm  todos.db-wal  try.sh
migrations/: 20231003134021_init.sql
public/: index.html  index.js
public/signup/: index.html
src/: db.rs  handlers.rs  main.rs  models.rs
