[package]
name = "todo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenv = "0.15.0"
actix-files = "0.6.2"
libsql-client = "0.32.0"
url = "2.4.1"
